--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -176,7 +176,7 @@
             <div class="col-6 col-md-5">
                 <div class="col">
                     <p class="mt-6">Exploratorio: observa, rastrea pregunta indaga, compara </p>
-                    <p class="mt-4">Descriptivo: describe, los hechos a partir de observar, rastrear </p>
+                    <p class="mt-4">Descriptivo: Descriptivo: describe, los hechos a partir de observar, rastrear preguntar. indagar, comparar</p>
                     <p class="mt-5">Analítico: estudia minuciosamente los hechos para analizarlos y establecer nuevas </p>
                     <p class="mt-5">Explicativo: explica de forma detallada cada variable estudiada a partir de métodos rigurosos de análsis</p>
                     <p class="mt-5">Interpretativo: requiere de habilidades y experiencia para interpretar los hechos investigados </p>
@@ -226,8 +226,8 @@
                 </div>
             </div>
             <div class="col-6 col-md-6">
-                <P class="mt-5">Se caracteriza por controlar variables, atributos y características del objeto de estudio. Ejemplo (edad, nivel educativo,) compara
-                <div class="col-4"><img class="mt-5 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
+                <P class="mt-5">Se caracteriza por controlar variables, atributos y características del objeto de estudio. Ejemplo (edad, nivel educativo,) compara las variables objeto de estudio.
+                <div class="col-4"><img class="mt-2 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
                 </P>
             </div>
             <div class="col-6 col-md-6">
@@ -368,6 +368,7 @@
             <p>Se le denominan técnicas al conjunto de herramientas e instrumentos utilizados para recolectar la información del proceso investigativo. La selección de la técnica depende del enfoque, el nivel de profundidad, método y forma de análisis requerido para desarrollar la investigación.
             <div class="col-auto"><img class="img-a md-10 img-fluid" src="assets/images/pages/ilustraciones/24.jpg" /></div>
             </p>
+            <p class="mt-5">Características de las técnicas de recolección datos:</p>
         </div>
         <table class="table table-bordered table-striped mt-5">
             <thead>
