--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -14,7 +14,7 @@
             <div class="card-deck">
                 <div class="card card_grey">
                     <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/head.png" />
-                        <P class="text left mt-5">Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones de primera mano, cartas entre otras. Sus principales características son su originalidad como evidencia directa de su autor.</P>
+                        <P class="text left mt-5">Las fuentes primarias son documentos que no han sido editados, reinterpretados o reestructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedia pintura o grabaciones de primera mano, cartas entre otras. Sus principales características son su originalidad como evidencia directa de su autor.</P>
                     </div>
                 </div>
                 <div class="card card_grey">
