--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,8 @@
                             <strong>Juan Daniel polanco Muñoz </strong><br />
                             <strong>Zuleidy María Ruiz Torres</strong><br />
                             <strong>Oleg Litvin</strong><br />
-                            <span class="text-small">Diseño Web y producción audiovisual</span><br />
-                        <p class="footer-texto"></p><strong>Gustavo Adolfo Marún Suárez</strong><br /><span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                            <span class="text-small">Diseño Web y producción audiovisual</span><br /></p>
+                        <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /><span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
